Bug 1710324 - Don't specify background color on native scrollbar elements on Windows / Linux. r=Gijs
This allow the automatic scrollbar darkening logic to work without further
tweaks. We don't set appearance: none in any scrollbar on desktop (and we
support scrollbar-{width,color} to customize them anyways).

Differential Revision: https://phabricator.services.mozilla.com/D114696

UltraBlame original commit: 238a4cfcdc86eee1f73a4ccf486d689c05753f98

--- a/toolkit/themes/windows/global/xulscrollbars.css
+++ b/toolkit/themes/windows/global/xulscrollbars.css
@@ -289,13 +289,6 @@ cursor
 :
 default
 ;
-background
--
-color
-:
-#
-f0f0f0
-;
 }
 media
 all
@@ -477,16 +470,6 @@ horizontal
 *
 /
 thumb
-{
-background
--
-color
-:
-#
-cdcdcd
-;
-}
-thumb
 [
 orient
 =
@@ -591,15 +574,6 @@ width
 cursor
 :
 default
-;
-background
--
-color
-:
--
-moz
--
-Dialog
 ;
 }
 /
